[gd_scene load_steps=7 format=3 uid="uid://d3hhupns508pe"]

[ext_resource type="Script" uid="uid://cxnol2veofgft" path="res://Scripts/button.gd" id="1_sch6n"]

[sub_resource type="BoxMesh" id="BoxMesh_dxuxj"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_sch6n"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="Animation" id="Animation_sch6n"]
resource_name = "pressed"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.111836), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jnuv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("buttonMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnuv5"]
_data = {
&"RESET": SubResource("Animation_jnuv5"),
&"pressed": SubResource("Animation_sch6n")
}

[node name="button" type="StaticBody3D" groups=["button"]]
script = ExtResource("1_sch6n")

[node name="buttonMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_dxuxj")

[node name="buttonText" type="Label3D" parent="buttonMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.264838)
text = "text"

[node name="buttonCollider" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_sch6n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jnuv5")
}
